crates/pixi-build-rust/src/snapshots/pixi_build_rust__rust__tests__generate_rust_recipe_from_project_model.snap
---
source: crates/pixi-build-rust/src/rust.rs
expression: ir
---
context: {}
package:
  name: build-rust
  version: 0.1.0
source:
  - path: "[ ... path ... ]"
    sha256: ~
build:
  number: ~
  script: "[ ... script ... ]"
requirements:
  build:
    - boltons
    - if: unix
      then: rich
      else: []
  host: []
  run: []
  run_constraints: []
tests: []
about: ~
extra: ~
