crates/pixi-build-rust/src/snapshots/pixi_build_rust__rust__tests__setting_host_and_build_requirements-2.snap
---
source: crates/pixi-build-rust/src/rust.rs
expression: recipe.unwrap()
---
schema_version: 1
context: {}
package:
  name: test-reqs
  version: 1.2.3
build:
  number: 0
  script: "[ ... script ... ]"
requirements:
  build:
    - boltons
    - rust_osx-arm64
  host:
    - hatchling
  run:
    - foobar >=3.2.1
