crates/pixi-build-rust/src/snapshots/pixi_build_rust__rust__tests__setting_host_and_build_requirements.snap
---
source: crates/pixi-build-rust/src/rust.rs
expression: reqs
---
build:
  - boltons
  - rust_osx-arm64
host:
  - hatchling
run:
  - foobar >=3.2.1
